# superpixel-benchmark

./: .gitmodules  CMakeLists.txt
adaptive_slic_cli/: CMakeLists.txt  helpers.h  main.cpp
customslic_cli/: CMakeLists.txt  main.cpp
examples/: make-graph.py
examples/bash/: compare_algos.sh  compare_seeds_reseeds.sh  compare_slic_customslic.sh  evaluate_slic.sh  update_customslic.sh
lib_adaptive_slic/: CMakeLists.txt  adaptive_slic.cpp  adaptive_slic.h  libfixp.h  opencl-slic.cpp  opencl-slic.h  slic-utils.cpp  slic-utils.h  slic.cl  slic.cpp  slic.h
lib_customslic/: CMakeLists.txt  SLIC.cpp  SLIC.h  customslic_opencv.cpp  customslic_opencv.h  plotter.h
